src/objects/Approval_Group__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_LP_GTV_Level__c</fullName>
        <label>GTV Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Group__c</fullName>
        <label>Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Local_Channel__c</fullName>
        <label>Local Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_office__c</fullName>
        <label>Sales office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_LP_Group__c</columns>
        <columns>APTS_LP_GTV_Level__c</columns>
        <columns>APTS_LP_Local_Channel__c</columns>
        <columns>APTS_LP_Sales_office__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approval Groups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>